2002-09-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/xml/repr.c (sp_repr_document_new): Set doctype and comment

	* src/xml/repr-io.c (sp_repr_read_file): Set doctype and comment if SVG
	(sp_repr_read_mem): Ditto
	(sp_repr_save_stream): Save doctype and comment

2002-09-19  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-text.c (sp_string_set_shape): Update position array
	(sp_text_get_cursor_coords): New method
	(sp_text_set_shape): Set tspan position to text, if unset; Limit block
	to tspans with unspecified role
	(sp_text_insert_line): Implement

	* src/text-context.c (sp_text_context_setup): Set blink to 250ms
	(sp_text_context_selection_modified): Implement, update cursor position
	(sp_text_context_selection_changed): Ditto
	(sp_text_context_root_handler): Cursor placement, insertion and deletion
	work as they should

	* src/display/nr-arena-shape.c (nr_arena_shape_update): Do not try to
	fill paths consisting of single lineto

	* src/gradient-chemistry.c (sp_gradient_ensure_private_normalized): Only keep
	if hrefcount == 1 (fixed bug)

	* src/style.c (sp_style_read): Only parse CMYK if RGBA present

2002-09-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-ellipse.c (sp_arc_set_elliptical_path_attribute): Lay 2PI arcs as 2 segments
	(sp_arc_write): Write SVG <ellipse> if it really is one

	* src/style.c (sp_style_write_ienum): We compare computed values, to
	avoid unnecessary setting of attributes
	(sp_style_merge_from_parent): Set only computed values for everything

	* src/helper/art-utils.c (sp_vpath_from_bpath_closepath): New method,
	borrowed relevant helpers from libart code

	* src/display/nr-arena-shape.c (nr_arena_shape_update): Closeall if filled,
	limit min width to 0.125 instead of cutting it to 0

2002-09-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/event-context.c (sp_event_context_destroy): Do not disconnect
	desktop signal, as there is no such
	(sp_event_context_new): Do not connect desktop signal
