@@ -22,7 +22,7 @@ void sp_file_open (const guchar *uri);
 
 void sp_file_open_dialog (gpointer object, gpointer data);
 
-void sp_file_save (GtkWidget * widget);
+void sp_file_save (GtkWidget *widget);
 void sp_file_save_document (SPDocument *document);
 
 void sp_file_save_as (GtkWidget * widget);
